syntax = "proto3";

package wsMessages;
option go_package = "contracts/wsMessages";

import "google/protobuf/timestamp.proto";
import "models.proto";

message OutBoundMessage {
  oneof message {
    //send new message to channel
    SendMessage sendMessage = 1;
    JoinChannel joinChannel = 2;
  }
}

message InBoundMessage {
  oneof message {
    // sent when new message in chat received
    Message newMessage = 1;
    MeJoinedToChannel meJoinedToChannel = 2;
  }
}

message SendMessage {
  string text = 1;
  string localId = 2;
  optional CustomData customData = 3;
}

message JoinChannel {
  int64 initialPageSize = 1;
  int64 initialOffset = 2;
}

message ChannelInitialInfo {
  string channelId = 1;
  repeated Message historyMessages = 2;
}

message MeJoinedToChannel {
  string meIdentifier = 1;
  bool isSuccess = 2;
  ChannelInitialInfo channel = 3;
}